--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 Berikut merupakan beberapa tampilan website yang nanti akan dibuat :
 
 <b>Beranda sebelum login</b><br>
-<img src="/Image/HomeBeforeLogin01.jpg" height="256" width="426.7"><br><br>
+<img src="/Image/HomeBeforeLogin01.JPG" height="256" width="426.7"><br><br>
 
 <b>Beranda setelah login</b><br>
 <img src="/Image/HomeAfterLogin.jpg" height="833.3" width="426.7"><br><br>
