--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>Web ini memiliki beberapa fitur yang mirip seperti <i>game</i> yang tentunya menarik sekali untuk diikuti. Contohnya adalah mendapatkan <i>title</i> tergantung dari seberapa banyak poin yang dikumpulkan. Poin yang ada di sini terdapat dua jenis, yaitu <i>send point(SP)</i> dan <i>fill point<FP></i>. <i>SP</i> dapat bertambah dengan mengisi form-form yang diberikan oleh pengguna lain. Sedangkan, <i>FP</i> dapat bertambah dengan membuat form-form tersebut</p>
 
-Berikut merupakan beberapa tampilan website yang nanti akan dibuat :
+Berikut merupakan beberapa tampilan website yang nanti akan dibuat :<br>
 
 <b>Beranda sebelum login</b><br>
 <img src="/Image/HomeBeforeLogin01.JPG" height="256" width="426.7"><br><br>
@@ -34,7 +34,7 @@ Berikut merupakan beberapa tampilan website yang nanti akan dibuat :
 </ol>
 
 <h1>Bagaimana Cara Kerja Web ini?</h1>
-Cara kerja web ini akan ditampilkan dengan klik <a href="#">LINK INI</a>
+Cara kerja web ini akan ditampilkan dengan klik <a href="/Image/carakerja.jpg">LINK INI</a>
 
 <h1>Tentang Kami </h1>
 Kami merupakan mahasiswa dari prodi Ilmu Komputer di Universitas Negeri Jakarta. Kami berasal dari <b>Grup F</b> pada mata kuliah <i>HCI(Human Computer Interaction)</i>. <br>
